# nca-service/nca-api/src/main/resources/api.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   # Some fields also need to be set in the web.xml. Swagger doesn't set these properly in the generated web.xml.
   # The fields in question: title, version and basepath.
-  version: "1"
+  version: "2"
   title: Natural Capital Assessment API
   description: |
     Green and Blue in the city models 
@@ -16,55 +16,12 @@ consumes:
 produces:
   - application/json
 paths:
- 
-  /assessmentScenarioRequest:
+
+  /assessmentRequest:
     post:
-      operationId: postAssessmentScenarioRequest
+      operationId: postAssessmentRequest
       tags:
         - assessmentRequest
-      description: |
-        Excecute one or more scenarios and affiliated measures (models) 
-      parameters:
-        - name: apiKey
-          in: query
-          description: The API-key that can be used with other calls.
-          required: true
-          type: string
-        - name: scenarios
-          in: body
-          required: true
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/AssessmentScenarioRequest'
-      responses:
-        '200':
-          description: |
-            In case of normal behavior.
-          schema:
-            $ref: '#/definitions/AssessmentScenarioRequestResponse'
-        '400':
-          description: |
-            In case of user error - thing of missing fields.
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-        '401':
-          description: API key is missing or invalid
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-        '500':
-          description: |
-            In case of system error. Please contact the helpdesk if this error persists.
-          schema:
-            $ref: '#/definitions/ErrorResponse'
-      security:
-        - apiKey: []
-
-  /assessmentTKSRequest:
-    post:
-      operationId: postAssessmentTKSRequest
-      tags:
-        - assessmentTKSRequest
       description: |
         Excecute one or more scenarios and affiliated measures (models) with geojson input with supplied measures
       parameters:
@@ -72,6 +29,16 @@ paths:
           in: query
           description: The API-key that can be used with other calls.
           required: true
+          type: string
+        - name: jobKey
+          in: query
+          description: The jobKey is a reference to a previouse job so it can skip extracting data files
+          required: false
+          type: string
+        - name: measureKey
+          in: query
+          description: The measureKey is a reference to a uploaded measureCollection if omitted we use a default measureCollection
+          required: false
           type: string
         - name: features
           in: body
@@ -83,7 +50,7 @@ paths:
           description: |
             In case of normal behavior.
           schema:
-            $ref: '#/definitions/AssessmentTKSRequestResponse'
+            $ref: '#/definitions/AssessmentRequestResponse'
         '400':
           description: |
             In case of user error - thing of missing fields.
@@ -100,20 +67,29 @@ paths:
             $ref: '#/definitions/ErrorResponse'
       security:
         - apiKey: []      
-          
-  /measureCollectiondata:
-    get:
-      operationId: getMeasureCollectionData
+      
+  /generateAPIKey:
+    post:
+      operationId: postGenerateAPIKey
       tags:
-        - measures
+        - user
       description: |
-        Will return a list of measure that containts the calculation parameters for the measure for individual layers
+        Generate a new API-key. The API-key will be e-mailed to the given e-mail address.
+        This function can also be used to reset the API-key for a previous registered e-mail address.
+        A previous API-key will be invalidated.
+        The function returns via the field __successful__ if the request successed.
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/GenerateAPIKeyRequest'
       responses:
         '200':
           description: |
             In case of normal behavior.
           schema:
-            $ref: '#/definitions/MeasureCollectionDataResponse'
+            $ref: '#/definitions/ValidateResponse'
         '400':
           description: |
             In case of user error - thing of missing fields.
@@ -123,7 +99,119 @@ paths:
           description: |
             In case of system error. Please contact the helpdesk if this error persists.
           schema:
-            $ref: '#/definitions/ErrorResponse'     
+            $ref: '#/definitions/ErrorResponse'
+                  
+  /measureCollection:
+    post:
+      operationId: postMeasureCollection
+      tags:
+        - measures
+      description: |
+        Upload a new set of measures with a name.
+      parameters:
+        - name: apiKey
+          in: query
+          description: De API-key die is gebruikt bij andere opdrachten.
+          required: true
+          type: string
+        - name: measure
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/MeasureDataRequest'
+      responses:
+        '200':
+          description: |
+            In case of normal behavior.
+          schema:
+            $ref: '#/definitions/ValidateResponse'
+        '400':
+          description: |
+            In case of user error - thing of missing fields.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '401':
+          description: API key is missing or invalid
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '500':
+          description: |
+            In case of system error. Please contact the helpdesk if this error persists.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+  /getMeasureCollection:
+    get:
+      operationId: getMeasureCollection
+      tags:
+        - measures
+      description: |
+        Will return a list of measure that containts the calculation parameters for the measure for individual layers
+      parameters:
+        - name: apiKey
+          in: query
+          description: The API-key that can be used with other calls.
+          required: true
+          type: string
+      responses:
+        '200':
+          description: |
+            In case of normal behavior.
+          schema:
+            $ref: '#/definitions/MeasureCollectionsResponse'
+        '400':
+          description: |
+            In case of user error - thing of missing fields.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '401':
+          description: API key is missing or invalid
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '500':
+          description: |
+            In case of system error. Please contact the helpdesk if this error persists.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+
+  /deleteMeasureCollection:     
+    delete:
+      operationId: deleteMeasureCollection
+      tags:
+        - measures
+      description: |
+        Upload a new set of measures with a given name.
+      parameters:
+        - name: apiKey
+          in: query
+          description: The used API-key
+          required: true
+          type: string
+        - name: measureKey
+          in: query
+          description: the measureKey to be removed
+          required: true
+          type: string          
+      responses:
+        '200':
+          description: |
+            In case of normal behavior.
+          schema:
+            $ref: '#/definitions/ValidateResponse'
+        '400':
+          description: |
+            In case of user error - thing of missing fields.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '401':
+          description: API key is missing or invalid
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '500':
+          description: |
+            In case of system error. Please contact the helpdesk if this error persists.
+          schema:
+            $ref: '#/definitions/ErrorResponse'  
  
   /modeldata/{model}:
     get:
@@ -160,206 +248,7 @@ securityDefinitions:
      type: apiKey
      name: api_key
      in: query
-definitions:
-  AssessmentResultsResponse:
-    type: object
-    properties:
-      entries:
-        type: array
-        items:
-          $ref: '#/definitions/AssessmentResultResponse'
-      key:
-        type: string
-        description: A unique key for the geoserver results layers.
-      url:
-        type: string
-        description: A url to zipped file containing all generated file for the run including a log file and json of the scenario
-  AssessmentResultResponse:
-    type: object
-    required:
-      - code
-    properties:
-      code:
-        type: integer
-        format: int32
-      name:
-        type: string
-      wmsname:
-        type: string
-      model:
-        type: string
-      modelDescription:
-        type: string      
-      tableop:
-        type: string
-      min:
-        type: number
-        format: double
-      max:
-        type: number
-        format: double
-      sum:
-        type: number
-        format: double
-      tablevalue:
-        type: number
-        format: double
-      avg:
-        type: number 
-        format: double
-      units:
-        type: string
-      class:
-        type: string    
-      legendrgbmin:
-        type: string
-      legendrgbmax:
-        type: string
-      legendmin:   
-        type: number
-        format: double
-      legendmax:
-         type: number
-         format: double
-      geobox:
-         $ref: '#/definitions/GeoBox'
-  GeoBox:
-    type: object
-    properties:
-      xmin:
-        type: integer
-        format: int32
-      ymin:
-        type: integer
-        format: int32
-      ymax:
-        type: integer
-        format: int32
-      xmax:
-        type: integer
-        format: int32
-  AssessmentTKSResultsResponse:
-    type: object
-    properties:
-      entries:
-        type: array
-        items:
-          $ref: '#/definitions/AssessmentTKSResultResponse'
-      key:
-        type: string
-        description: A unique key for the geoserver results layers.
-  AssessmentTKSResultResponse:
-    type: object
-    required:
-      - code
-    properties:
-      code:
-        type: integer
-        format: int32
-      name:
-        type: string
-      model:
-        type: string  
-      modelDescription:
-        type: string
-      min:
-        type: number
-        format: double
-      max:
-        type: number
-        format: double
-      sum:
-        type: number
-        format: double
-      tablevalue:
-        type: number
-        format: double
-      avg:
-        type: number 
-        format: double
-      units:
-        type: string
-      class:
-        type: string         
-  AssessmentRequest:
-    type: object
-    required:
-      - name
-      - model
-      - eco_system_service
-      - layers
-      - extent
-    properties:
-      name:
-        type: string
-        description: A description given to this assessment request.
-      model:
-        type: string
-        description: |
-          A description given to this assessment request.
-          supported values are: 
-          ___NKMODEL:___ Excecute nkmodel.
-          ___NKMODEL2:___ Excecute preview version of nkmodel.
-        enum:
-          - NKMODEL
-          - NKMODEL2
-      eco_system_service:
-        type: string
-        description: The eco system service for which an assessment request is made.
-        default: air_regulation
-      layers:
-        type: array
-        minItems: 1
-        items:
-          $ref: '#/definitions/LayerObject'
-      extent:
-        type: array
-        minItems: 2
-        items:
-          type: array
-          minItems: 2
-          items:
-            type: integer            
-  AssessmentScenarioRequest:
-    type: object
-    required:
-      - measures
-    properties:
-      measures:
-        type: array
-        minItems: 1
-        description: An array of measures that determine the scenario
-        items: 
-          $ref: '#/definitions/AssessmentRequest'
-  AssessmentRequestResponse:
-    allOf:
-      - $ref: '#/definitions/ValidateResponse'
-      - properties:
-          key:
-            type: string
-            description: A unique id to identify this request.
-  ImmediatlyAssessmentRequestResponse:
-    allOf:
-      - $ref: '#/definitions/ValidateResponse'
-      - properties:
-          key:
-            type: string
-            description: A unique id to identify this request.
-          assessmentResults:
-            type: array
-            items:
-              $ref: '#/definitions/AssessmentResultResponse'
-  AssessmentScenarioRequestResponse:
-    allOf:
-      - $ref: '#/definitions/ValidateResponse'
-      - properties:
-          key:
-            type: string
-            description: A unique id to identify this request.
-          assessmentResults:
-            type: array
-            items:
-              $ref: '#/definitions/AssessmentResultsResponse'         
+definitions:    
   DataType:
     type: string
     description: |
@@ -464,27 +353,89 @@ definitions:
       - CROP
       - TREE_HEIGHT
       - WINDFORCE
-      - WATER
       - WOZ
+      - WATER
       - WETFOREST
       - PRODFOREST
       - GHG
       - GLG
       - GWT
-      - POPULATION2018
       - SBU
-      - WOZ2018
-  AssessmentTKSRequestResponse:
+      - LGN8
+      - WOZINWONER
+  AssessmentRequestResponse:
     allOf:
       - $ref: '#/definitions/ValidateResponse'
       - properties:
           key:
             type: string
             description: A unique id to identify this request.
+          jobKey:
+            type: string
+            description: A unique key to rerun this model with speed performance  
           assessmentResults:
             type: array
             items:
-              $ref: '#/definitions/AssessmentTKSResultsResponse'
+              $ref: '#/definitions/AssessmentResultsResponse'   
+  AssessmentResultsResponse:
+    type: object
+    properties:
+      entries:
+        type: array
+        items:
+          $ref: '#/definitions/AssessmentResultResponse'
+      key:
+        type: string
+        description: A unique key for the geoserver results layers.      
+  AssessmentResultResponse:
+    type: object
+    required:
+      - code
+    properties:
+      code:
+        type: integer
+        format: int32
+      name:
+        type: string
+      model:
+        type: string  
+      modelDescription:
+        type: string
+      min:
+        type: number
+        format: double
+      max:
+        type: number
+        format: double
+      sum:
+        type: number
+        format: double
+      tablevalue:
+        type: number
+        format: double
+      avg:
+        type: number 
+        format: double
+      units:
+        type: string
+      class:
+        type: string        
+  MapLayers:
+    type: object
+    properties:
+      layerFiles:
+        type: array
+        items:
+          $ref: '#/definitions/LayerFile'
+  LayerFile:
+    type: object
+    properties:
+      code:
+        type: string
+      filename:
+        type: string
+      description:
+        type: string     
   FeatureCollection:
     type: object
     properties:
@@ -498,6 +449,7 @@ definitions:
           type: number  
       features:
         type: array
+        required: false
         items:
           $ref: '#/definitions/Features'
   Features:
@@ -524,15 +476,44 @@ definitions:
           type: number
       areaWidth:
         type: string
-      areaFadius:
+      areaRadius:
         type: string
       area:
         type: number
       isProjectArea:
         type: boolean
-  MeasureCollectionDataResponse:
+  MeasureCollectionsResponse:
     type: object
     properties:
+      entries:
+        type: array
+        items:
+          $ref: '#/definitions/MeasureResponse'     
+  MeasureResponse:
+    type: object
+    properties:
+      key:
+        type: string
+        description: Uniqu key
+      name:
+        type: string
+        description: Name of the measure collection
+      version:
+        type: string
+        description: Version number of the measure collection
+      enabled:
+        type: boolean
+        description: If this measure can be used.
+      entries:
+        type: array
+        items:
+          $ref: '#/definitions/Measure'
+  MeasureDataRequest:
+    type: object
+    properties:
+      measureKey:
+        type: string
+        description: Unique singele name for the supplied measures
       name:
         type: string
         description: Name of the measure collection
@@ -570,7 +551,8 @@ definitions:
       - M84
       - M86
       - M89
-      - M91
+      - M91     
+
   MeasureCollection:
     type: object
     properties:
